--- a/resources.html
+++ b/resources.html
@@ -32,6 +32,17 @@
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </div>
+        <div class="dropdown">
+            <button>More</button>
+            <div class="content">
+                <li><a href="#">News/Events</a></li>
+                <li><a href="#">Staff Profile</a></li>
+                <li><a href="#">Student Profile</a></li>
+                <li><a href="#">COMPSSA UG</a></li>
+                <li><a href="#">Admissions</a></li>
+                <li><a href="#">Contact</a></li>
+            </div>
+        </div>
     </nav>
 
      </header>
