--- a/index.html
+++ b/index.html
@@ -21,15 +21,27 @@
          
 
     
-    <nav>
-        <div class="wrap"></div>
-         <img class="logo" src="img/comScience_logo.png" alt="CS department logo">
+    <nav class="header-nav">
+        <div class="wrap">
+            <img class="logo" src="img/comScience_logo.png" alt="CS department logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="resources.html">Resources</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
+
+        </div>
+        <div class="dropdown">
+            <button class="more-button">More</button>
+            <div class="content">
+                <li><a href="#">News/Events</a></li>
+                <li><a href="#">Staff Profile</a></li>
+                <li><a href="#">Student Profile</a></li>
+                <li><a href="#">COMPSSA UG</a></li>
+                <li><a href="#">Admissions</a></li>
+                <li><a href="#">Contact</a></li>
+            </div>
         </div>
     </nav>
 
