made me changes

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                     <button>More</button>
                     <div class="content">
                         <li><a href="Eventsandnews.html">News/Events</a></li>
-                        <li><a href="staffprofile.html">Staff Profile</a></li>
+                        <li><a href="Research.html">Research</a></li>
                         <li><a href="studentprofile.html">Student Profile</a></li>
                         <li><a href="compssa.html">COMPSSA UG</a></li>
                         <li><a href="admissions.html">Admissions</a></li>
@@ -47,9 +47,23 @@
      </header>
     
      <main>
+        <section class="about-banner">
+    <div about-banner-box>
+            <div class="about1">
+                <img class="ug-logo" src="img/UoG.png">
+                <div class="about2">
+                    <h4>COLLEGE OF BASIC AND APPLIED SCIENCES</h4><br>
+                    <h3>SCHOOL OF PHYSICAL AND MATHEMATICAL SCIENCES</h3><br>
+                    <h2>DEPARTMENT OF COMPUTER SCIENCE</h2>
+                </div>
+            </div>
+            
+    </div>
+
+            </section> 
         <h1 class="heading">ABOUT US</h1>
 <section>
-<div class="paragraph-box">
+<div class="paragraph-box2">
                     <p>Welcome to the University of Ghana Computer Science Department, a leading institution dedicated to fostering innovation, academic excellence, and technological advancement. Established with a commitment to shaping future innovators and problem solvers, our department serves as a hub for cutting-edge research, interdisciplinary collaboration, and the cultivation of forward-thinking minds.
 
         Our renowned faculty members, comprising accomplished scholars and industry experts, are dedicated to providing a supportive learning environment that encourages critical thinking, creativity, and practical application. We offer a comprehensive curriculum that blends theoretical knowledge with hands-on experience, equipping our students with the necessary skills to thrive in a rapidly evolving technological landscape.
