--- a/gallery.html
+++ b/gallery.html
@@ -29,19 +29,19 @@
                 <li><a href="resources.html">Resources</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
+                <div class="dropdown">
+                    <button>More</button>
+                    <div class="content">
+                        <li><a href="Eventsandnews.html">News/Events</a></li>
+                        <li><a href="Research.html">Research</a></li>
+                        <li><a href="studentprofile.html">Student Profile</a></li>
+                        <li><a href="compssa.html">COMPSSA UG</a></li>
+                        <li><a href="admissions.html">Admissions</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </div>
             </ul>
         </div>
-        <div class="dropdown">
-            <button>More</button>
-            <div class="content">
-                <li><a href="#">News/Events</a></li>
-                <li><a href="#">Staff Profile</a></li>
-                <li><a href="#">Student Profile</a></li>
-                <li><a href="#">COMPSSA UG</a></li>
-                <li><a href="#">Admissions</a></li>
-                <li><a href="#">Contact</a></li>
-            </div>
-        </div>
+        
     </nav>
 
      </header>
