--- a/Eventsandnews.html
+++ b/Eventsandnews.html
@@ -46,6 +46,45 @@
      </header>
     
      <main>
+        <h1>EVENTS/NEWS</h1>
+        <div class="event-grid">
+            <div class="style2"><span class="event-text">CODE & COCKTAIL</span>
+                <div class="inner-box1">
+                    <span class="date2">25TH NOV 2023</span>
+
+                </div>
+                
+            </div>
+            <div class="style1"><span class="event-text">CODE & COCKTAIL</span>
+                <p class="event-text1">@<br>CHINESE LAB<br>11:30 AM</p>
+                <div  class="inner-box2">
+                    <span class="date2"></span>
+                </div>
+            </div>
+            <div class="style2"><span class="event-text">CODE & COCKTAIL</span>
+                <div  class="inner-box3">
+                    <span class="date2"></span>
+                </div>
+            </div>
+            <div class="style1"><span class="event-text">CODE & COCKTAIL</span>
+                <div  class="inner-box4">
+                    <span  class="date2"></span>
+                </div>
+            </div>
+            <div class="style1"><span class="event-text">CODE & COCKTAIL</span>
+                <div  class="inner-box5">
+                    <span  class="date2"></span>
+                </div>
+            </div>
+            <div class="style2"><span class="event-text">CODE & COCKTAIL</span>
+                <div  class="inner-box6">
+                    <span  class="date2"></span>
+                </div>
+            </div>
+
+        </div>
+
+
 
      </main>
 
