made a faculty page and a few other changes

--- a/compssa.html
+++ b/compssa.html
@@ -31,16 +31,15 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <div class="dropdown">
-                    <button>More</button>
-                    <div class="content">
-                        <li><a href="Eventsandnews.html">News/Events</a></li>
-                        <li><a href="Research.html">Research</a></li>
-                        <li><a href="studentprofile.html">Student Profile</a></li>
-                        <li><a href="compssa.html">COMPSSA UG</a></li>
-                        <li><a href="admissions.html">Admissions</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </div>
-              
+                <button>More</button>
+                <div class="content">
+                    <li><a href="Eventsandnews.html">News/Events</a></li>
+                    <li><a href="Research.html">Research</a></li>
+                    <li><a href="faculty.html">Faculty</a></li>
+                    <li><a href="compssa.html">COMPSSA UG</a></li>
+                    <li><a href="admissions.html">Admissions</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </div>
             </ul>
             
     </nav>
