made the home page more interactive

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     <div class="info-box1">
         <img class="contact-logos1" src="img/icons8-location-64.png">
         <p class="info-text1">University Of Ghana,<br>Legon Campus<br>
-            Opposite Mathematics Department</p>
+            Opposite Statistics Department</p>
     </div>
 
     <div class="info-box2">
