--- a/resources.html
+++ b/resources.html
@@ -47,7 +47,9 @@
 
      </header>
      <main>
-        <h1 class="heading">RESOURCES</h1>
+<section class="contact-banner"> 
+    <div class="contact-overlay">
+        <h1 class="contact-h1">RESOURCES</h1>
         <div class="grid">
             <div class="style2"><a>Course Materials</a>
                 <img class="resource-icon1" src="img/icons8-folders-100.png" src="coursematerialslogo">
@@ -69,6 +71,8 @@
             </div>
 
         </div>
+    </div>
+</section> 
 
 
 
