--- a/admissions.html
+++ b/admissions.html
@@ -47,56 +47,95 @@
     </div>
 </section> 
 <div class="ad-text">
-<div>
-    <h1 class="heading2">UNDERGRADUATE PROGRAM</h1>
-    <p>We offer rigorous undergraduate programs in Computer Science designed to equip students with a solid foundation in computing, programming, algorithms, and problem-solving skills.
-        Prospective students interested in pursuing a Bachelor's degree in Computer Science are encouraged to apply through the university's admission portal.
-        Admission criteria typically include meeting the minimum academic requirements set by the university, 
-        including relevant high school qualifications and performance in required entrance examinations.
-        For further information or to explore additional details, kindly visit the <a href="https://admission.ug.edu.gh/applying/undergraduate/overview">undergraduate</a> sectioon of the University of Ghana Admissions portal.
-    </p>
-</div>
-<div>
-    <h1 class="heading2">GRADUATE PROGRAMS</h1>
-    <p>Our graduate programs cater to those seeking advanced studies in Computer Science. We offer Master's and Ph.D. programs focusing on specialized areas within the field, 
-        providing opportunities for research, innovation, and academic excellence. 
-        Prospective graduate students are required to meet specific academic qualifications, which may include possessing a relevant bachelor's degree, 
-        satisfactory performance in standardized tests, and fulfilling other department-specific prerequisites. For further information or to explore additional details, 
-        kindly visit the <a href="https://admission.ug.edu.gh/applying/postgraduate/overview">graduate</a> sectioon of the University of Ghana Admissions portal.
-    </p>
-</div>
-<div>
-        <h1 class="heading2">APPLICATION PROCESS</h1>
-    <P>
-        Applicants for both undergraduate and graduate programs should submit their applications through the University of Ghana's official admissions <a href="https://admission.ug.edu.gh/applying/postgraduate/overview">portal</a> during the designated application period. 
-        Detailed instructions and admission requirements specific to the Computer Science Department can be found on the department's website or the university's admissions office.
-        Please ensure to review and follow the outlined guidelines and deadlines for a successful application.
-    </P>
-</div>
-<div>
-    <h1 class="heading2">SCHOLARSHIPS AND FINANCIAL AID</h1>
-    <p>
-        The Department of Computer Science, in collaboration with the university, offers various scholarship
-        opportunities and financial aid packages for eligible students. These scholarships may be merit-based, need-based, or tied to specific achievements.
-        Prospective students are encouraged to explore the available scholarship options and criteria through the university's financial aid office or the department's <a href="">website</a>.
-    </p>
+    <div>
+        <h1 class="heading2">UNDERGRADUATE PROGRAM</h1>
+        <p>We offer rigorous undergraduate programs in Computer Science designed to equip students with a solid foundation in computing, programming, algorithms, and problem-solving skills.
+            Prospective students interested in pursuing a Bachelor's degree in Computer Science are encouraged to apply through the university's admission portal.
+            Admission criteria typically include meeting the minimum academic requirements set by the university, 
+            including relevant high school qualifications and performance in required entrance examinations.
+            For further information or to explore additional details, kindly visit the <a href="https://admission.ug.edu.gh/applying/undergraduate/overview">undergraduate</a> sectioon of the University of Ghana Admissions portal.
+        </p>
+    </div>
+    <div>
+        <h1 class="heading2">GRADUATE PROGRAMS</h1>
+        <p>Our graduate programs cater to those seeking advanced studies in Computer Science. We offer Master's and Ph.D. programs focusing on specialized areas within the field, 
+            providing opportunities for research, innovation, and academic excellence. 
+            Prospective graduate students are required to meet specific academic qualifications, which may include possessing a relevant bachelor's degree, 
+            satisfactory performance in standardized tests, and fulfilling other department-specific prerequisites. For further information or to explore additional details, 
+            kindly visit the <a href="https://admission.ug.edu.gh/applying/postgraduate/overview">graduate</a> sectioon of the University of Ghana Admissions portal.
+        </p>
+    </div>
+    <div>
+            <h1 class="heading2">APPLICATION PROCESS</h1>
+        <P>
+            Applicants for both undergraduate and graduate programs should submit their applications through the University of Ghana's official admissions <a href="https://admission.ug.edu.gh/applying/postgraduate/overview">portal</a> during the designated application period. 
+            Detailed instructions and admission requirements specific to the Computer Science Department can be found on the department's website or the university's admissions office.
+            Please ensure to review and follow the outlined guidelines and deadlines for a successful application.
+        </P>
+    </div>
+    <div>
+        <h1 class="heading2">SCHOLARSHIPS AND FINANCIAL AID</h1>
+        <p>
+            The Department of Computer Science, in collaboration with the university, offers various scholarship
+            opportunities and financial aid packages for eligible students. These scholarships may be merit-based, need-based, or tied to specific achievements.
+            Prospective students are encouraged to explore the available scholarship options and criteria through the university's financial aid office or the department's <a href="">website</a>.
+        </p>
 
+    </div>
+    <div>
+        <h1 class="heading2">CONTACT INFORMATION</h1>
+        <p>
+            For any inquiries regarding admissions, specific program requirements, or application procedures, please feel free to reach out to our 
+            Admissions Office on the first floor of International House, #1Annie Jiagge Road, University Campus,
+            Legon or visit the <a href="https://www.ug.edu.gh/">University of Ghana</a>'s official website for further information. 
+        </p>
+    </div>
+    <div>
+        <p>
+            We look forward to welcoming passionate and talented individuals to join our 
+            dynamic academic community at the University of Ghana's Department of Computer Science!
+        </p>
+    </div>
 </div>
-<div>
-    <h1 class="heading2">CONTACT INFORMATION</h1>
-    <p>
-        For any inquiries regarding admissions, specific program requirements, or application procedures, please feel free to reach out to our 
-        Admissions Office on the first floor of International House, #1Annie Jiagge Road, University Campus,
-        Legon or visit the <a href="https://www.ug.edu.gh/">University of Ghana</a>'s official website for further information. 
-    </p>
-</div>
-<div>
-<p>
-    We look forward to welcoming passionate and talented individuals to join our 
-    dynamic academic community at the University of Ghana's Department of Computer Science!
-</p>
-</div>
-</div>
+
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h4 class="footer-heading1">Contact Us</h4>
+                <p class="info-text1">
+                    University of Ghana, Legon Campus<br>
+                    Opposite Mathematics Department<br>
+                    P.O. Box LG 91, Legon, Accra<br>
+                    Ghana<br>
+                    Phone: +233 501 382 035<br>
+                    Email: info@ug.edu.gh<br>
+                </p>
+            </div>
+            <div class="col-md-4">
+                <h4 class="footer-heading2">Follow Us</h4>
+                <div class="social1">
+                    <a href="#"><img class="icon1" src="img/icons8-facebook-100.png"></a>
+                    <a href="#"><img class="icon1" src="img/icons8-twitterx-100.png"></a>
+                    <a href="#"><img class="icon1" src="img/icons8-linked-in-100.png"></a>
+                    <a href="#"><img class="icon1" src="img/icons8-instagram-100.png"></a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h4 class="footer-heading3">Quick Links</h4>
+                <ul class="quick-links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Programs</a></li>
+                    <li><a href="#">Faculty</a></li>
+                    <li><a href="#">Research</a></li>
+                    <li><a href="#">News & Events</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </main>
 
