--- a/research.html
+++ b/research.html
@@ -122,6 +122,44 @@
             </div>
         </div>
         </section> 
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h4 class="footer-heading1">Contact Us</h4>
+                        <p class="info-text1">
+                            University of Ghana, Legon Campus<br>
+                            Opposite Mathematics Department<br>
+                            P.O. Box LG 91, Legon, Accra<br>
+                            Ghana<br>
+                            Phone: +233 501 382 035<br>
+                            Email: info@ug.edu.gh<br>
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <h4 class="footer-heading2">Follow Us</h4>
+                        <div class="social1">
+                            <a href="#"><img class="icon1" src="img/icons8-facebook-100.png"></a>
+                            <a href="#"><img class="icon1" src="img/icons8-twitterx-100.png"></a>
+                            <a href="#"><img class="icon1" src="img/icons8-linked-in-100.png"></a>
+                            <a href="#"><img class="icon1" src="img/icons8-instagram-100.png"></a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <h4 class="footer-heading3">Quick Links</h4>
+                        <ul class="quick-links">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Programs</a></li>
+                            <li><a href="#">Faculty</a></li>
+                            <li><a href="#">Research</a></li>
+                            <li><a href="#">News & Events</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
        
 
 
