Added footer to other pages

--- a/compssa.html
+++ b/compssa.html
@@ -69,8 +69,44 @@
             <a href="https://www.facebook.com/univofgh/"><img class="icon3" src="img/facebook-2868.png"></a>     
         </div>
 
-    
-
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h4 class="footer-heading1">Contact Us</h4>
+                        <p class="info-text1">
+                            University of Ghana, Legon Campus<br>
+                            Opposite Mathematics Department<br>
+                            P.O. Box LG 91, Legon, Accra<br>
+                            Ghana<br>
+                            Phone: +233 501 382 035<br>
+                            Email: info@ug.edu.gh<br>
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <h4 class="footer-heading2">Follow Us</h4>
+                        <div class="social1">
+                            <a href="#"><img class="icon1" src="img/icons8-facebook-100.png"></a>
+                            <a href="#"><img class="icon1" src="img/icons8-twitterx-100.png"></a>
+                            <a href="#"><img class="icon1" src="img/icons8-linked-in-100.png"></a>
+                            <a href="#"><img class="icon1" src="img/icons8-instagram-100.png"></a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <h4 class="footer-heading3">Quick Links</h4>
+                        <ul class="quick-links">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="admissions.html">Programs</a></li>
+                            <li><a href="faculty.html">Faculty</a></li>
+                            <li><a href="research.html">Research</a></li>
+                            <li><a href="Eventsandnews.html">News & Events</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
      </main>
 
