--- a/faculty.html
+++ b/faculty.html
@@ -90,13 +90,13 @@
                     <div class="col-md-4">
                         <h4 class="footer-heading3">Quick Links</h4>
                         <ul class="quick-links">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Programs</a></li>
-                            <li><a href="#">Faculty</a></li>
-                            <li><a href="#">Research</a></li>
-                            <li><a href="#">News & Events</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="admissions.html">Programs</a></li>
+                        <li><a href="faculty.html">Faculty</a></li>
+                        <li><a href="research.html">Research</a></li>
+                        <li><a href="Eventsandnews.html">News & Events</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
