made a few changes

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         P.O. Box LG 91, Legon, Accra<br>
                         Ghana<br>
                         Phone: +233 501 382 035<br>
-                        Email: info@ug.edu.gh<br>
+                        Email: dcs@ug.edu.gh<br>
                     </p>
                 </div>
                 <div class="col-md-4">
